k8s/base/nats/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nats
  namespace: batchsender
  labels:
    app: nats
spec:
  clusterIP: None
  selector:
    app: nats
  ports:
  - name: client
    port: 4222
    targetPort: 4222
  - name: cluster
    port: 6222
    targetPort: 6222
  - name: monitor
    port: 8222
    targetPort: 8222
